- image fixed on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1356,7 +1356,8 @@ fieldset {
     text-transform: uppercase;
     margin-bottom: 2rem;
     white-space: nowrap;
-    position: relative
+    position: relative;
+    z-index: 1;
 }
 
 @media only screen and (max-width: 1600px) {
@@ -17540,5 +17541,9 @@ a.text-dark:focus {
 
     .text-bg2 {
         margin-left: 0;
+    }
+
+    .responsive-image {
+        width: 100%;
     }
 }
